--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -46,6 +46,9 @@
               </div>
               
               <script>
+
+                import Vue from 'vue'
+
                 const options = {
                   name: "Collection App",
                   data() {
