--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -72,7 +72,7 @@
                 }
                 const CollectionApp = Vue.createApp(options).mount('#ajaxCollection');
 
-                var example1 = new Vue({
+                var example1 = Vue.createApp({
   el: '#example-1',
   data: {
     counter: 0
