--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -61,12 +61,9 @@
                       .then(data => this.collection = data);
                     },
                     greet(event) {
-                      // `this` inside methods points to the current active instance
-                      alert('Hello ' + this.name + '!')
-                      // `event` is the native DOM event
-                      if (event) {
-                        alert(event.target.tagName)
-                      }
+                      fetch('https://www.bmgind.com/collections/emergency-food-ration?view=json')
+                      .then(response => response.json())
+                      .then(data => this.collection = data);
                     }
                   },
                   mounted() {
