--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -66,7 +66,7 @@
                       fetch('https://www.bmgind.com/collections/emergency-food-ration?view=json')
                       .then(response => response.json())
                       .then(data => this.collection = data);
-                      vm.$forceUpdate();
+                      this.$forceUpdate();
                     }
                   },
                   mounted() {
