--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,3 +1,5 @@
+
+{{'bc-sf-filter.js' | asset_url | script_tag}}
 <script src="https://unpkg.com/vue@next"></script>
 
 {% paginate collection.products by 120 %}
@@ -84,4 +86,83 @@
     </div>
   </div>
 </div>
+
+<div class="grid containerswap">
+   
+  {% if customlayout == 'sidebar' %}
+  <div class="grid__item three-twelfths medium--one-whole small--one-whole sidebar swap1">
+  <div id="bc-sf-filter-tree"></div>             
+  </div>
+
+  
+  <div class="grid__item nine-twelfths medium--one-whole small--one-whole nopadding swap2">
+    <div class="sortingbar">
+      <div class="form-horizontal grid__item one-whole medium--one-half small--one-half nopadding">
+          <!--bs filter code-->
+          <div id="bc-sf-filter-tree-mobile"></div>         
+      </div>
+
+      <div class="form-horizontal grid__item one-whole medium--one-half small--one-half nopadding">
+        <!--bs filter code-->        
+        <div id="bc-sf-filter-top-sorting"></div>       
+      </div>
+      <div class="clearfix"></div> 
+    </div>
+      
+  </div>  
+  
+  {% else %} 
+
+  <div class="grid__item one-whole nopadding">
+    <div class="sortingbar">
+      <div class="form-horizontal grid__item one-half nopadding">
+      </div>
+      <div class="form-horizontal grid__item one-whole medium--one-half small--one-half nopadding">
+      {% include 'collection-sorting' %}
+      </div> 
+       <div class="clearfix"></div> 
+
+    </div>    
+  </div>    
+  
+  {% endif %} 
+  
+  <div class="grid__item {% if customlayout == 'sidebar' %}nine-twelfths{% else %} one-whole{% endif %} medium--one-whole small--one-whole nopadding swap3">
+  <!--bs filter code-->      
+    <div id="bc-sf-filter-products" class="grid-uniform grid-link__container">
+  {% if customlayout == 'sidebar' %}
+        {% assign grid_item_width = 'wide--one-third medium--one-half small--one-half' %}
+      {% else %} 
+        {% assign grid_item_width = 'wide--one-quarter medium--one-half small--one-half' %}        
+      {% endif %}        
+      {%- assign product_width = 335 -%}
+      {% if collection.products  != empty %}
+        {% for product in collection.products %}
+        {% unless product.tags contains 'hideproduct' %}
+          {% assign featured = product %}
+            <div class="grid__item {{grid_item_width}}">
+              {% include 'product-grid-item' %}
+            </div>
+        {%endunless%}
+        {% endfor %}
+      {% else %}
+        <div class="grid__item">
+            <p class="nomatch"><em>{{ 'collections.general.no_matches' | t }}</em></p>
+          </div>
+      {% endif %}
+    </div>
+    
+    {% if customlayout == 'sidebar' %}
+    <!--bs filter code-->
+    <div id="bc-sf-filter-bottom-pagination"></div>
+  {% else %}	
+    
+      {% if paginate.pages > 1 %}
+        {% include 'pagination' %}
+      {% endif %}
+    {% endif %}
+    
+  </div>
+</div>
+
 {% endpaginate %}
