--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,4 +1,5 @@
 
+{{'bc-sf-filter-lib.js' | asset_url | script_tag}}
 {{'bc-sf-filter.js' | asset_url | script_tag}}
 <script src="https://unpkg.com/vue@next"></script>
 
