--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,178 +1,87 @@
 <script src="https://unpkg.com/vue@next"></script>
 
-<div class="grid containerswap">
-   
-  <div class="grid__item three-twelfths medium--one-whole small--one-whole sidebar swap1">
-  <div id="bc-sf-filter-tree"></div>      
-  </div>       
+{% paginate collection.products by 120 %}
 
-  
-  <div class="grid__item nine-twelfths medium--one-whole small--one-whole nopadding swap2">
-    <div class="sortingbar">
-      <div class="form-horizontal grid__item one-whole medium--one-half small--one-half nopadding">
-          <!--bs filter code-->
-          <div id="bc-sf-filter-tree-mobile"></div>         
-      </div>
-
-      <div class="form-horizontal grid__item one-whole medium--one-half small--one-half nopadding">
-        <!--bs filter code-->        
-        <div id="bc-sf-filter-top-sorting"></div>       
-      </div>
-      <div class="clearfix"></div> 
+<div class="bmg_main_collection">
+  <div class="bmgmc_breadcrumbs">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          {% include 'breadcrumb' %}
+        </div>
+      </div>  
     </div>
-      
-  </div>  
-
-  <div class="grid__item {% if customlayout == 'sidebar' %}nine-twelfths{% else %} one-whole{% endif %} medium--one-whole small--one-whole nopadding swap3">
-  <!--bs filter code-->      
-    <div id="bc-sf-filter-products" class="grid-uniform grid-link__container">
-  {% if customlayout == 'sidebar' %}
-        {% assign grid_item_width = 'wide--one-third medium--one-half small--one-half' %}
-      {% else %} 
-        {% assign grid_item_width = 'wide--one-quarter medium--one-half small--one-half' %}        
-      {% endif %}        
-      {%- assign product_width = 335 -%}
-      {% if collection.products  != empty %}
-        {% for product in collection.products %}
-        {% unless product.tags contains 'hideproduct' %}
-          {% assign featured = product %}
-            <div class="grid__item {{grid_item_width}}">
-              {% include 'product-grid-item' %}
-            </div>
-        {%endunless%}
-        {% endfor %}
-      {% else %}
-        <div class="grid__item">
-            <p class="nomatch"><em>{{ 'collections.general.no_matches' | t }}</em></p>
+  </div>
+  <div class="bmgmc_main_body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 bmg_sidebar_filter">
+          <div class="bmg_sidebar_filter_body">
+            {% include 'collection-tags' %}
           </div>
-      {% endif %}
+        </div>
+        <div class="col-md-9 bmg_mainbody">
+            <div class="bmgmc_sorting_view">
+              {% include 'collection-sorting' %}
+              <div class="bmgmc_grid_list">
+                <div id="listView">
+
+                </div>
+                <div id="gridView">
+
+                </div>
+              </div>
+            </div>
+            <div class="bmg_collection_products">
+              <div id="ajaxCollection">
+                {% include 'collection-tags' %}
+                  <template v-if="collection">
+                      <h1 v-html="collection.title"></h1>
+                      <div v-for="product in collection.products">
+                          <h3 v-html="product.title"></h3>
+                          <p v-html="product.description"></p>
+                          <p v-html="product.price"></p>
+                      </div>
+                  </template>
+              </div>
+              
+              <script>
+
+                Vue.createApp({
+                  name: "Collection App",
+                  data() {
+                    return {
+                      collection: null
+                    }
+                  },
+                  methods: {
+                    grabCollection() {
+                      fetch('https://www.bmgind.com/collections/{{ collection.handle }}?view=json')
+                      .then(response => response.json())
+                      .then(data => this.collection = data);
+                    },
+                    updateProducts(event) {
+                      var dataAttribute = event.target.getAttribute('data-url');
+                      console.log(dataAttribute);
+                      fetch('https://www.bmgind.com/collections/{{ collection.handle }}/' + dataAttribute + '?view=json')
+                      .then(response => response.json())
+                      .then(data => this.collection = data);
+                      this.$forceUpdate();
+                    }
+                  },
+                  mounted() {
+                    this.grabCollection();
+                  }
+                }).mount('#ajaxCollection');
+
+              </script>
+            </div>
+            {% if paginate.pages > 1 %}
+              {% include 'pagination' %}
+            {% endif %}
+        </div>
+      </div>
     </div>
-    
-    {% if customlayout == 'sidebar' %}
-    <!--bs filter code-->
-    <div id="bc-sf-filter-bottom-pagination"></div>
-  {% else %}	
-    
-      {% if paginate.pages > 1 %}
-        {% include 'pagination' %}
-      {% endif %}
-    {% endif %}
-    
   </div>
 </div>
-
-<script>
-  // Declare bcSfFilterConfig variable
-  var bcSfFilterConfig = {
-    shop: {
-      apiUrl: 'https://services.mybcapps.com/bc-sf-filter/filter',
-      name: '{{ shop.name }}',
-      domain: '{{ shop.permanent_domain }}',
-      currency: '{{ shop.currency }}',
-      money_format: '{{ shop.money_format }}'
-    },
-    general: {
-      file_url: "{{ '' | file_url }}",
-      collection_id: {{ collection.id | default: 0 }},
-      collection_handle: "{{ collection.handle }}",
-      default_sort_by: "{{ collection.default_sort_by }}",
-      swatch_extension: "png",
-      no_image_url: "{{ 'bc-sf-filter-no-image.gif' | asset_url }}"
-    },
-    label: {
-      sale: "{{ 'products.product.sale' | t }}",
-      sold_out: "{{ 'products.product.sold_out' | t }}",
-      regular_price: "{{ 'products.product.regular_price' | t }}",
-      sale_price: "{{ 'products.product.sale_price' | t }}",
-      from_price: "{{ 'products.general.from_html' | t }}",
-      homepage_product_title: "{{ 'home_page.onboarding.product_title' | t }}",
-      sorting: "{{ 'collections.sorting.title' | t }}",
-      sorting_featured: "{{ 'collections.sorting.featured' | t }}",
-      sorting_title_ascending: "{{ 'collections.sorting.az' | t }}",
-      sorting_title_descending: "{{ 'collections.sorting.za' | t }}",
-      sorting_price_ascending: "{{ 'collections.sorting.price_ascending' | t }}",
-      sorting_price_descending: "{{ 'collections.sorting.price_descending' | t }}",
-      sorting_date_ascending: "{{ 'collections.sorting.date_ascending' | t }}",
-      sorting_date_descending: "{{ 'collections.sorting.date_descending' | t }}",
-    },
-    cart: {
-      pagination: "{{ cart.attributes.pagination }}"
-    },
-    section: {
-      center_grid_link: {% if section.settings.center_grid_link != nil %} {{ section.settings.center_grid_link | json }} {% else %} false {% endif %},
-      show_sale_circle: true,
-      show_sold_out_circle: true,
-      vendor_enable: {% if section.settings.vendor_enable != nil %} {{ section.settings.vendor_enable }} {% else %} false {% endif %},
-      show_review: 1
-    }
-  };
-</script>
-
-<script>
-  // Declare bcSfFilterConfig variable
-  var bcSfFilterMainConfig = {
-    api: {
-      filterUrl: 'https://services.mybcapps.com/bc-sf-filter/filter',
-      searchUrl: 'https://services.mybcapps.com/bc-sf-filter/search',
-      suggestionUrl: 'https://services.mybcapps.com/bc-sf-filter/search/suggest',
-    },
-    shop: {
-      name: '{{ shop.name | escape }}',
-      url: '{{ shop.url }}',
-      domain: '{{ shop.permanent_domain }}',
-      currency: '{{ shop.currency }}',
-      money_format: '{{ shop.money_format | replace: "'", '"' | replace: "$", "&#36;" }}'
-    },
-    general: {
-      file_url: "{{ '' | file_url }}",
-      asset_url: "{{ 'bc-sf-filter.js' | asset_url }}",
-      collection_id: {{ collection.id | default: 0 }},
-      collection_handle: "{{ collection.handle }}",
-      {% if template contains 'collection' and collection.handle %}
-      collection_count: {{ collection.products_count  }},
-      {% endif %}
-      collection_tags: {{ current_tags | json }},
-      current_tags: {{ current_tags | json }},
-      default_sort_by: "{{ collection.default_sort_by }}",
-      swatch_extension: "png",
-      no_image_url: "{{ 'bc-sf-filter-no-image.gif' | asset_url }}",
-      search_term: "{{ search.terms | default: '' }}",
-      template: "{{ template }}"
-    },
-    {% if shop.metafields.bc-sf-filter.settings != blank %}
-    settings: {{ shop.metafields.bc-sf-filter.settings }},
-    {% endif %}
-  };
-  function mergeObject(obj1, obj2){
-    var obj3 = {};
-    for (var attr in obj1) { obj3[attr] = obj1[attr]; }
-    for (var attr in obj2) { obj3[attr] = obj2[attr]; }
-    return obj3;
-  }
-  if (typeof bcSfFilterConfig !== 'undefined') {
-    var bcSfFilterConfig = mergeObject(bcSfFilterConfig, bcSfFilterMainConfig); 
-  } else {
-    var bcSfFilterConfig = mergeObject({}, bcSfFilterMainConfig); 
-  }
-</script>
-
-<!-- Include Resources -->
-{{ 'bc-sf-filter-lib.js' | asset_url | script_tag }}
-{% if template contains 'collection' %}
-{% unless template contains 'bc-original' %}
-{{ 'bc-sf-filter.js' | asset_url | script_tag }}
-{% endunless %}
-{% endif %}
-
-<!-- Initialize App -->
-<script>
-  var bcsffilter = new BCSfFilter();
-  bcsffilter.init();
-</script>
-
-<!-- Initialize & Customize Filter -->
-{% if template contains 'collection' %}
-{% unless template contains 'bc-original' %}
-<script>bcsffilter.initFilter();</script>
-{% endunless %}
-{% endif %}
+{% endpaginate %}
