--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -3,6 +3,7 @@
 {% paginate collection.products by 120 %}
 
 <div class="bmg_main_collection">
+
   <div class="bmgmc_breadcrumbs">
     <div class="container">
       <div class="row">
@@ -12,76 +13,59 @@
       </div>  
     </div>
   </div>
-  <div class="bmgmc_main_body">
+
+  <div id="ajaxCollection">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 bmg_sidebar_filter">
+        <div class="col-md-3">
           <div class="bmg_sidebar_filter_body">
             {% include 'collection-tags' %}
           </div>
         </div>
-        <div class="col-md-9 bmg_mainbody">
-            <div class="bmgmc_sorting_view">
-              {% include 'collection-sorting' %}
-              <div class="bmgmc_grid_list">
-                <div id="listView">
-
-                </div>
-                <div id="gridView">
-
-                </div>
+        <div class="col-md-9">
+          <template v-if="collection">
+              <h1 v-html="collection.title"></h1>
+              <div v-for="product in collection.products">
+                  <h3 v-html="product.title"></h3>
+                  <p v-html="product.description"></p>
+                  <p v-html="product.price"></p>
               </div>
-            </div>
-            <div class="bmg_collection_products">
-              <div id="ajaxCollection">
-                {% include 'collection-tags' %}
-                  <template v-if="collection">
-                      <h1 v-html="collection.title"></h1>
-                      <div v-for="product in collection.products">
-                          <h3 v-html="product.title"></h3>
-                          <p v-html="product.description"></p>
-                          <p v-html="product.price"></p>
-                      </div>
-                  </template>
-              </div>
-              
-              <script>
-
-                Vue.createApp({
-                  name: "Collection App",
-                  data() {
-                    return {
-                      collection: null
-                    }
-                  },
-                  methods: {
-                    grabCollection() {
-                      fetch('https://www.bmgind.com/collections/{{ collection.handle }}?view=json')
-                      .then(response => response.json())
-                      .then(data => this.collection = data);
-                    },
-                    updateProducts(event) {
-                      var dataAttribute = event.target.getAttribute('data-url');
-                      console.log(dataAttribute);
-                      fetch('https://www.bmgind.com/collections/{{ collection.handle }}/' + dataAttribute + '?view=json')
-                      .then(response => response.json())
-                      .then(data => this.collection = data);
-                      this.$forceUpdate();
-                    }
-                  },
-                  mounted() {
-                    this.grabCollection();
-                  }
-                }).mount('#ajaxCollection');
-
-              </script>
-            </div>
-            {% if paginate.pages > 1 %}
-              {% include 'pagination' %}
-            {% endif %}
+          </template>
         </div>
       </div>
     </div>
   </div>
+
+  <script>
+
+    Vue.createApp({
+      name: "Collection App",
+      data() {
+        return {
+          collection: null
+        }
+      },
+      methods: {
+        grabCollection() {
+          fetch('https://www.bmgind.com/collections/{{ collection.handle }}?view=json')
+          .then(response => response.json())
+          .then(data => this.collection = data);
+        },
+        updateProducts(event) {
+          var dataAttribute = event.target.getAttribute('data-url');
+          console.log(dataAttribute);
+          fetch('https://www.bmgind.com/collections/{{ collection.handle }}/' + dataAttribute + '?view=json')
+          .then(response => response.json())
+          .then(data => this.collection = data);
+          this.$forceUpdate();
+        }
+      },
+      mounted() {
+        this.grabCollection();
+      }
+    }).mount('#ajaxCollection');
+
+  </script>
+
 </div>
 {% endpaginate %}
