--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -659,3 +659,7 @@ COLLECTION STYLING
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+div#ajaxCollection {
+    padding-bottom: 50px;
+}
