--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -8,7 +8,8 @@
             {
                 "title" : "{{ product.title}}",
                 "description" : "{{product.description | strip_html | strip_newlines }}",
-                "price" : "{{product.price | money}}"
+                "price" : "{{product.price | money}}",
+                "url" : "{{ product.url }}",
             }
             {% unless forloop.last %},{% endunless %}
         {% endfor %}
