--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -9,7 +9,7 @@
                 "title" : "{{ product.title}}",
                 "description" : "{{product.description | strip_html | strip_newlines }}",
                 "price" : "{{product.price | money}}",
-                "url" : "{{ product.url }}",
+                "url" : "{{ product.url }}"
             }
             {% unless forloop.last %},{% endunless %}
         {% endfor %}
