--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -24,13 +24,13 @@
         </div>
         <div class="col-md-9 collection_body">
           <template v-if="collection">  
-              <div v-for="product in collection.products" class="row">
-                <div class="col-md-3">
+            <div class="row">
+              <div v-for="product in collection.products" class="col-md-3">
                   <h3 v-html="product.title"></h3>
                   <p v-html="product.price"></p>
                   <a :href="product.url">LEARN MORE</a>
-                </div>
               </div>
+            </div>
           </template>
         </div>
       </div>
