--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -663,3 +663,8 @@ COLLECTION STYLING
 div#ajaxCollection {
     padding-bottom: 50px;
 }
+
+.collection_body > .row {
+    display: flex;
+    flex-wrap: wrap;
+}
