--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -26,9 +26,11 @@
           <template v-if="collection">  
             <div class="row">
               <div v-for="product in collection.products" class="col-md-3">
-                  <h3 v-html="product.title"></h3>
-                  <p v-html="product.price"></p>
-                  <a :href="product.url">LEARN MORE</a>
+                  <div class="collection_inner_body">
+                    <h3 v-html="product.title"></h3>
+                    <p v-html="product.price"></p>
+                    <a :href="product.url">LEARN MORE</a>
+                  </div>
               </div>
             </div>
           </template>
