--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -27,6 +27,7 @@
             <div class="row">
               <div v-for="product in collection.products" class="col-md-3">
                   <div class="collection_inner_body">
+                    <img :src="product.image">
                     <h3 v-html="product.title"></h3>
                     <p v-html="product.price"></p>
                     <a :href="product.url">LEARN MORE</a>
