--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -683,7 +683,7 @@ div#ajaxCollection {
     margin: 0;
     font-size: .833vw;
     font-family: AvenirNext-Regular;
-    margin-bottom: 1vw;
+    margin-bottom: .75vw;
     font-weight: 400;
     min-height: 3.646vw;
 }
