--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -56,8 +56,7 @@
           .then(data => this.collection = data);
         },
         updateProducts(event) {
-          var dataAttribute = event.currentTarget.getAttribute('data-url');
-          var dataUrl = 'https://www.bmgind.com/collections/{{ collection.handle }}/' + dataAttribute + '?view=json';
+          var dataUrl = 'https://www.bmgind.com/collections/{{ collection.handle }}/' + event + '?view=json';
           fetch(dataUrl)
           .then(response => response.json())
           .then(data => this.collection = data);
