--- a/snippets/collection-tags.liquid
+++ b/snippets/collection-tags.liquid
@@ -37,8 +37,8 @@
         {% if tag contains tagmatch%}
 
           <div>
-                <label class="bmgfilter" data-url="{{tag}}" @click="updateProducts('{{tag}}')">
-                  <input type="checkbox" name="{{filter}}" value="{{tag}}" class="bmgfiltercheck" {% if strparams contains tag%}checked{%endif%}/>
+                <label class="bmgfilter" data-url="{{tag}}">
+                  <input @click="updateProducts('{{tag}}')" type="checkbox" name="{{filter}}" value="{{tag}}" class="bmgfiltercheck" {% if strparams contains tag%}checked{%endif%}/>
                   {% if filter contains 'calories' %}
                     {{ tag | replace: tagmatch,'' | replace: '0',' ' | lstrip | replace: ' ','0' }}
                   {% elsif tag contains 'Mylar' %}
