--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -50,6 +50,20 @@
                       </ul>
                     </div>
                   </div>
+                  <div class="clearRow">
+                    <ul>
+                      <li>
+                        <p>10-Can</p>
+                      </li>
+                      <li>
+                        <p>Pouches</p>
+                      </li>
+                      <li>
+                        <p>Pro-Paks</p>
+                      </li>
+                    </ul>
+                    <button type="button">Clear All</button>
+                  </div>
                 </div>
               </div>
             </div>
