--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -54,12 +54,15 @@
                     <ul>
                       <li>
                         <p>10-Can</p>
+                        <img src="{{ 'clearImg.png' | asset_img_url: 'master' }}">
                       </li>
                       <li>
                         <p>Pouches</p>
+                        <img src="{{ 'clearImg.png' | asset_img_url: 'master' }}">
                       </li>
                       <li>
                         <p>Pro-Paks</p>
+                        <img src="{{ 'clearImg.png' | asset_img_url: 'master' }}">
                       </li>
                     </ul>
                     <button type="button">Clear All</button>
