--- a/sections/bmg_footer.liquid
+++ b/sections/bmg_footer.liquid
@@ -2,7 +2,7 @@
     <div class="bmgf_top_outer">
         <div class="container">
             <div class="row bmgf_top">
-                <div class="col-md-2">
+                <div class="col-md-2 logo_footer_col">
                     <a href="/">
                         <img class="logo_footer" src="{{ section.settings.logo | img_url: 'master'}}">
                     </a>
