--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -132,7 +132,7 @@
     background: #F0F0FD;
     border: none;
     padding-left: 1.5vw;
-    border-radius: 4px;
+    border-radius: 0;
     height: 2.083vw;
 }
 
@@ -164,7 +164,7 @@
     background-size: 0.938vw;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 4px;
+    border-radius: 0;
 }
 /********************************************************
 HOMEPAGE STYLING
