--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -269,7 +269,7 @@ HOMEPAGE STYLING
 .bmg_categories h3 {
     font-size: 0.833vw;
     font-weight: 100;
-    font-family: 'AvenirNext-Regular';
+    font-family: 'AvenirNext-Bold';
     text-align: center;
     color: #4C5DC9;
 }
