--- a/sections/product_page_v2.liquid
+++ b/sections/product_page_v2.liquid
@@ -1,37 +1,80 @@
-<div class="product_page_v2_main">
-    <div class="ppv2_product_summary">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="ppv2_gallery">
+{% assign msrp = '' %}
+{% assign cpi = '' %}
+{%for tag in product.tags%}
+  {% if tag contains 'msrp-' %}
+    {% assign msrp = tag | remove: 'msrp-' | money %}
+  {% elsif tag contains 'cpi-' %}
+    {% assign cpi = tag | remove: 'cpi-' | money %}
+  {% endif %}
+{%endfor%}
 
-                    </div>
-                    <div class="ppv2_gallery_links">
+<div itemscope itemtype="http://schema.org/Product" id="ProductSection" data-section-id="{{ section.id }}" data-section-type="product-template" data-image-zoom-type="{{ section.settings.product_image_zoom_type }}" data-related-enabled="{{ section.settings.product_related_enable }}" data-social-sharing="{{ section.settings.social_sharing }}" data-show-extra-tab="{{ section.settings.show_extra_tab }}" data-extra-tab-content="{{ section.settings.extra_tab_content }}" data-enable-history-state="true" class="centercontent">
 
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="ppv2_productInfo">
+  <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
+  <meta itemprop="image" content="{{ product.featured_image.src | img_url: 'grande' }}">
 
-                    </div>
-                </div>
-            </div>
+  <div class="product-single">
+    <div class="grid product-single__hero">
+      <div class="post-large--hide  medium--hide small--one-whole mobileprodtitle">
+        {%include 'product_titles', msrp: msrp, cpi: cpi%}
+      </div>
+      <div class="grid__item post-large--two-quarters medium--two-quarters small--one-whole product-single_image_holder">
+        {% assign on_sale = false %}
+        {% if product.compare_at_price_min > 0 %}
+          {% assign on_sale = true %}
+        {% endif %}
+        
+        {% if on_sale %}
+        <span class="badge badge--sale">
+          <span class="badge__text{% if sale_text.size > 7 %} badge__text--small{% endif %}">
+              {{ product.compare_at_price_min  | minus: product.price  | times: 100.0 | divided_by: product.compare_at_price_max | money_without_currency | times: 100 | remove: '.0'}}%<br>off
+          </span>
+        </span>
+        {% endif %}
+        
+        {%include 'product_images'%}
+      </div>
+      
+      
+      <div class="grid__item post-large--three-eighths medium--two-quarters small--one-whole ">
+        <div class="small--hide">
+          {%include 'product_titles', msrp: msrp, cpi: cpi%}
         </div>
-    </div>
-    <div class="ppv2_product_specs">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="ppv2_tabs">
-                        <div class="ppv2_tab_nav">
-                            
-                        </div>
-                        <div class="ppv2_tab_content">
-                            
-                        </div>
-                    </div>
-                </div>
+        <p class="space20"></p>
+        {% include 'product_form' %}
+        
+      </div>
+      
+      <hr class="hr--clear hr--small hr--divline">
+
+      {%if product.description contains '!!!!!tabs!!!!!'%}
+        {% include 'product_description_tabs' %}
+      {%else%}
+            
+        <div class="grid productdtl">
+          <div class="grid__item post-large--four-fifths small--one-whole">
+
+            <div class="product-detail-description " itemprop="description">
+              {{ product.description | split:'!!!!!-----!!!!!' | last | replace: '!!!!!tabs!!!!!','' }}
             </div>
+
+          </div>
         </div>
+      
+      {% endif %}
+            
+     
+      
     </div>
+  </div>
+
+ 
+
 </div>
+
+{% unless product.empty? %}
+  <script type="application/json" id="ProductJson-{{ section.id }}">
+    {{ product | json }}
+  </script>
+{% endunless %}
+{{ 'option_selection.js' | shopify_asset_url | script_tag }}
