--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -118,6 +118,7 @@
     color: #fff;
     font-size: 0.833vw;
     padding-right: 1.5vw;
+    text-transform: uppercase;
 }
 
 .bmgh_nav_header .row.bmg_h_main {
